@@ -1,6 +1,7 @@
 package com.veadan.folib.providers.repository;
 
 import com.alibaba.fastjson.JSONObject;
+import com.alibaba.fastjson.serializer.SerializerFeature;
 import com.veadan.folib.artifact.AsyncArtifactEntryHandler;
 import com.veadan.folib.domain.Artifact;
 import com.veadan.folib.domain.ArtifactEntity;
@@ -11,10 +12,13 @@ import com.veadan.folib.util.LocalDateTimeInstance;
 import jnr.ffi.annotations.In;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.io.FilenameUtils;
+import org.apache.commons.lang3.exception.ExceptionUtils;
 import org.springframework.stereotype.Component;
 
 import javax.inject.Inject;
+import java.io.ByteArrayOutputStream;
 import java.io.IOException;
+import java.io.ObjectOutputStream;
 import java.nio.file.Files;
 
 @Slf4j
@@ -38,9 +42,16 @@ public class ArtifactDownloadingEventHandler extends AsyncArtifactEntryHandler {
 
             return null;
         }
-        String fileName = "." + FilenameUtils.getName(repositoryPath.getFileName().toString()) + "-metadata";
+        String fileName = "." + FilenameUtils.getName(repositoryPath.getFileName().toString()) + ".metadata";
         RepositoryPath artifactRepositoryPath = repositoryPath.getParent().resolve(fileName);
-        Files.writeString(artifactRepositoryPath, JSONObject.toJSONString(artifactEntry));
+        try (ByteArrayOutputStream byteArrayOutputStream = new ByteArrayOutputStream();
+             ObjectOutputStream objectOutputStream = new ObjectOutputStream(byteArrayOutputStream)) {
+            objectOutputStream.writeObject(artifactEntry);
+            byte[] byteArray = byteArrayOutputStream.toByteArray();
+            Files.write(artifactRepositoryPath, byteArray);
+        } catch (Exception ex) {
+            log.error("写入制品 [{}] 本地缓存.metadata文件错误", ExceptionUtils.getStackTrace(ex));
+        }
         Artifact updateArtifactEntry = new ArtifactEntity(artifactEntry.getNativeId(), artifactEntry.getStorageId(), artifactEntry.getRepositoryId(), artifactEntry.getUuid(), artifactEntry.getArtifactCoordinates());
         updateArtifactEntry.setDownloadCount(artifactEntry.getDownloadCount() + 1);
         updateArtifactEntry.setLastUsed(LocalDateTimeInstance.now());
